Removes external assets

--- a/example/index.html
+++ b/example/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="isometric-grid">
       <div class="isometric-block block-2x2 has-detail" data-coordinates="[1,-1]" data-coordinates-expanded="[1,-3]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/transportl-ref-1298x1262.png" alt="Illustration de la pièce: Debitis enim amet suscipit">
+        <img src="img/transportl-ref-1298x1262.png" alt="Illustration de la pièce: Debitis enim amet suscipit">
         <h1>Debitis enim amet suscipit</h1>
         <p class="description">Reprehenderit dolor dolores reiciendis est distinctio atque quidem debitis. Eum delectus suscipit fuga qui saepe
           deserunt mollitia. Accusamus iste quas eligendi distinctio voluptatibus incidunt.</p>
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="isometric-block block-2x1 has-detail" data-coordinates="[-2,1]" data-coordinates-expanded="[-6,1]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/stock-ref-1200x1030.png" alt="Illustration de la pièce: Sed repellendus">
+        <img src="img/stock-ref-1200x1030.png" alt="Illustration de la pièce: Sed repellendus">
         <h1>Sed repellendus</h1>
         <p class="description">Repudiandae eligendi nesciunt adipisci facere exercitationem esse commodi. Vel et aut ipsa tenetur nihil.</p>
         <div class="content-detail">
@@ -101,7 +101,7 @@
         </div>
       </div>
       <div class="isometric-block block-2x1 has-detail" data-coordinates="[-1,1]" data-coordinates-expanded="[-3,1]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/cuisine-ref-1200x1030.png" alt="Illustration de la pièce: Repudiandae repellendus nesciunt">
+        <img src="img/cuisine-ref-1200x1030.png" alt="Illustration de la pièce: Repudiandae repellendus nesciunt">
         <h1>Repudiandae repellendus</h1>
         <p class="description">Et illum eum ea dolorem eveniet et. Repudiandae ut ipsa ut ut. Dignissimos hic facilis distinctio accusantium doloremque.<br
           />
@@ -122,7 +122,7 @@
         </div>
       </div>
       <div class="isometric-block block-2x2 has-detail" data-coordinates="[1,1]" data-coordinates-expanded="[1,1]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/accueil-ref-1298x1262.png" alt="Illustration de la pièce: Accueil">
+        <img src="img/accueil-ref-1298x1262.png" alt="Illustration de la pièce: Accueil">
         <h1>Accueil</h1>
         <p class="description">Quasi aut iusto non. Quia quia magni veniam eos perferendis.</p>
         <div class="content-detail">
@@ -144,7 +144,7 @@
         </div>
       </div>
       <div class="isometric-block block-1x1 has-detail" data-coordinates="[-1,-3]" data-coordinates-expanded="[4,4]" data-floor="2">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-A-ref-800x800.png" alt="Illustration de la pièce: Chambre A">
+        <img src="img/chambre-A-ref-800x800.png" alt="Illustration de la pièce: Chambre A">
         <h1>Chambre A</h1>
         <p class="description">Praesentium praesentium tenetur quia quia. </p>
         <div class="content-detail">
@@ -171,7 +171,7 @@
         </div>
       </div>
       <div class="isometric-block block-1x1 has-detail" data-coordinates="[0,-3]" data-coordinates-expanded="[]" data-floor="2">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: Chambre B">
+        <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: Chambre B">
         <h1>Chambre B</h1>
         <p class="description">Tenetur quia quia. </p>
         <div class="content-detail">
@@ -191,7 +191,7 @@
         </div>
       </div>
       <div class="isometric-block block-1x1 has-detail" data-coordinates="[-1,-2]" data-coordinates-expanded="[]" data-floor="2">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-C-ref-800x800.png" alt="Illustration de la pièce: Chambre C">
+        <img src="img/chambre-C-ref-800x800.png" alt="Illustration de la pièce: Chambre C">
         <h1>Chambre C</h1>
         <p class="description">Aut perferendis perferendis id occaecati</p>
         <div class="content-detail">
@@ -210,7 +210,7 @@
         </div>
       </div>
       <div class="isometric-block block-1x1 has-detail" data-coordinates="[0,-2]" data-coordinates-expanded="[]" data-floor="2">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: Chambre D">
+        <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: Chambre D">
         <h1>Chambre D</h1>
         <p class="description">Aut perferendis perferendis id occaecati</p>
         <div class="content-detail">
@@ -228,7 +228,7 @@
         </div>
       </div>
       <div class="isometric-block block-2x2 has-detail" data-coordinates="[-2, 0]" data-coordinates-expanded="[5,-3]" data-floor="2">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/restauration-ref-1298x1262.png" alt="Illustration de la pièce: Restauration">
+        <img src="img/restauration-ref-1298x1262.png" alt="Illustration de la pièce: Restauration">
         <h1>Restauration</h1>
         <p class="description">Quia ad non quisquam. Magni fugit et ea voluptate maiores.</p>
         <div class="content-detail">
@@ -248,7 +248,7 @@
         </div>
       </div>
       <div class="isometric-block block-2x2 has-detail" data-coordinates="[0,0]" data-coordinates-expanded="[-3,-3]" data-floor="2">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/loisirs-ref-1298x1262.png" alt="Illustration de la pièce: Loisirs">
+        <img src="img/loisirs-ref-1298x1262.png" alt="Illustration de la pièce: Loisirs">
         <h1>Loisirs</h1>
         <p class="description">Praesentium praesentium tenetur quia quia. Ut voluptate molestiae et et.</p>
         <div class="content-detail">
@@ -279,13 +279,13 @@
         </div>
       </div>
       <div class="isometric-block block-1x1" data-coordinates="[-2,-4]" data-coordinates-expanded="[]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: ">
+        <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-1x1" data-coordinates="[-2,-3]" data-coordinates-expanded="[]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: ">
+        <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-2x1 has-detail" data-coordinates="[-1,-3]" data-coordinates-expanded="[-3,5]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/Soignants-ref-1200x1030.png" alt="Illustration de la pièce: Soignants">
+        <img src="img/Soignants-ref-1200x1030.png" alt="Illustration de la pièce: Soignants">
         <h1>Soignants</h1>
         <p class="description"></p>
         <div class="content-detail">
@@ -302,41 +302,41 @@
         </div>
       </div>
       <div class="isometric-block block-1x1" data-coordinates="[-4,-2]" data-coordinates-expanded="[]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-A-ref-800x800.png" alt="Illustration de la pièce: ">
+        <img src="img/chambre-A-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-1x1" data-coordinates="[-3,-2]" data-coordinates-expanded="[]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: ">
+        <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-1x1" data-coordinates="[-4,-1]" data-coordinates-expanded="[]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-C-ref-800x800.png" alt="Illustration de la pièce: ">
+        <img src="img/chambre-C-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-1x1" data-coordinates="[-3,-1]" data-coordinates-expanded="[]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: ">
+        <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-2x1" data-coordinates="[-2,-1]" data-coordinates-expanded="[1,5]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/finances-ref-1200x1030.png" alt="Illustration de la pièce: Finances">
+        <img src="img/finances-ref-1200x1030.png" alt="Illustration de la pièce: Finances">
         <h1>Finances</h1>
       </div>
       <div class="isometric-block block-2x1" data-coordinates="[-1,-1]" data-coordinates-expanded="[4,1]" data-floor="3">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/bureau-manager-ref-1200x1030.png" alt="Illustration de la pièce: Bureau manager">
+        <img src="img/bureau-manager-ref-1200x1030.png" alt="Illustration de la pièce: Bureau manager">
         <h1>Bureau manager</h1>
       </div>
       <div class="isometric-block block-1x2" data-coordinates="[-1,2]" data-coordinates-expanded="[]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/Exterieur-EMS-Cuisine_stock.png" alt="Illustration de la pièce: ">
+        <img src="img/Exterieur-EMS-Cuisine_stock.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-1x2" data-coordinates="[1,2]" data-coordinates-expanded="[2,8]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/Exterieur-EMS-Accueil-ouest.png" alt="Illustration de la pièce: Bureau manager">
+        <img src="img/Exterieur-EMS-Accueil-ouest.png" alt="Illustration de la pièce: Bureau manager">
         <h1>Bureau manager</h1>
         <p class="description">Dolor voluptate aut qui voluptates quibusdam. Eum quos officia et.</p>
       </div>
       <div class="isometric-block block-2x1" data-coordinates="[2,-1]" data-coordinates-expanded="[]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/Exterieur-EMS-Transport.png" alt="Illustration de la pièce: ">
+        <img src="img/Exterieur-EMS-Transport.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-2x1" data-coordinates="[2,1]" data-coordinates-expanded="[]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/Exterieur-EMS-Accueil-est.png" alt="Illustration de la pièce: ">
+        <img src="img/Exterieur-EMS-Accueil-est.png" alt="Illustration de la pièce: ">
       </div>
       <div class="isometric-block block-1x1" data-coordinates="[2,2]" data-floor="1">
-        <img src="https://rawgit.com/antistatique/house-of-isometric/dev/example/img/Exterieur-EMS-Accueil-angle.png" alt="Illustration de la pièce: ">
+        <img src="img/Exterieur-EMS-Accueil-angle.png" alt="Illustration de la pièce: ">
       </div>
       <div class="focus-background gradient-background gradient-background-brown">
       </div>
