--- a/example/index.html
+++ b/example/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
     crossorigin="anonymous">
-  <link rel="stylesheet" href="../dist/house-of-isometric.css">
+  <link rel="stylesheet" href="../dist/house-of-isometry.css">
 </head>
 
 <body class="bg-info">
@@ -345,7 +345,7 @@
 
   <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I="
     crossorigin="anonymous"></script>
-  <script src="../dist/house-of-isometric.js"></script>
+  <script src="../dist/house-of-isometry.js"></script>
   <script>
     $(document).ready(function () {
       var isometricLayout = new IsometricGrid($('.isometric-layout'), 200, 116);
