--- a/example/index.html
+++ b/example/index.html
@@ -71,9 +71,9 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Debitis enim amet suscipit</h4>
               <p class="card-text">
-                <p>Reprehenderit dolor dolores reiciendis est distinctio atque quidem debitis. Eum delectus suscipit fuga qui
+                </p><p>Reprehenderit dolor dolores reiciendis est distinctio atque quidem debitis. Eum delectus suscipit fuga qui
                   saepe deserunt mollitia. Accusamus iste quas eligendi distinctio voluptatibus incidunt.</p>
-              </p>
+              <p></p>
             </div>
             <a href="http://www.google.fr" class="card-block card-block-link text-center">
         <span class="card-link">En savoir plus</span>
@@ -90,9 +90,9 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Architecto nihil maxime et aut</h4>
               <p class="card-text">
-                <p>Sed blanditiis accusamus repellat sapiente exercitationem dicta impedit. Ut laudantium ut a reiciendis in
+                </p><p>Sed blanditiis accusamus repellat sapiente exercitationem dicta impedit. Ut laudantium ut a reiciendis in
                   id cumque et. Aliquid ipsa id excepturi aliquam qui temporibus.</p>
-              </p>
+              <p></p>
             </div>
             <a href="http://www.littel.net/" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -103,17 +103,16 @@
       <div class="isometric-block block-2x1 has-detail" data-coordinates="[-1,1]" data-coordinates-expanded="[-3,1]" data-floor="1">
         <img src="img/cuisine-ref-1200x1030.png" alt="Illustration de la pièce: Repudiandae repellendus nesciunt">
         <h1>Repudiandae repellendus</h1>
-        <p class="description">Et illum eum ea dolorem eveniet et. Repudiandae ut ipsa ut ut. Dignissimos hic facilis distinctio accusantium doloremque.<br
-          />
+        <p class="description">Et illum eum ea dolorem eveniet et. Repudiandae ut ipsa ut ut. Dignissimos hic facilis distinctio accusantium doloremque.<br>
         </p>
         <div class="content-detail">
           <div class="card">
             <div class="card-block">
               <h4 class="card-title mb-0">Repudiandae repellendus nesciunt</h4>
               <p class="card-text">
-                <p>Sapiente tenetur vel quam pariatur voluptates delectus et ea. Nihil fuga architecto rem fugiat suscipit blanditiis
+                </p><p>Sapiente tenetur vel quam pariatur voluptates delectus et ea. Nihil fuga architecto rem fugiat suscipit blanditiis
                   et. Numquam esse dignissimos eos aut optio. Ut dolorum expedita voluptas.</p>
-              </p>
+              <p></p>
             </div>
             <a href="http://www.google.fr" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -130,12 +129,12 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Suscipit alias error consequuntur</h4>
               <p class="card-text">
-                <p>Ut
+                </p><p>Ut
                   <del>voluptas non voluptatum</del> non. Occaecati a nihil iure doloremque saepe. <a href="http://www.google.com">Ut illo ratione blanditiis</a>                  delectus quam dolores in.</p>
                 <p>Est voluptas <strong>nulla</strong> quia qui alias dolores est. Culpa in et sunt molestiae consequatur sequi.
                   <em>Qui nam omnis</em> fugit optio. Id sunt labore quis quo <span style="text-decoration: underline;">consectetur</span>                  quia.</p>
                 <p>Test</p>
-              </p>
+              <p></p>
             </div>
             <a href="http://www.google.com" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -143,7 +142,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1 has-detail" data-coordinates="[-1,-3]" data-coordinates-expanded="[4,4]" data-floor="2">
+      <div class="isometric-block block-1x1 has-detail" data-coordinates="[0,-2]" data-coordinates-expanded="[4,4]" data-floor="2">
         <img src="img/chambre-A-ref-800x800.png" alt="Illustration de la pièce: Chambre A">
         <h1>Chambre A</h1>
         <p class="description">Praesentium praesentium tenetur quia quia. </p>
@@ -152,7 +151,7 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Est asperiores soluta tempore</h4>
               <p class="card-text">
-                <p>Nihil in voluptatem sunt non impedit qui. Quae consequatur natus et adipisci. Amet quisquam voluptate iure.
+                </p><p>Nihil in voluptatem sunt non impedit qui. Quae consequatur natus et adipisci. Amet quisquam voluptate iure.
                   Voluptatem numquam dolor et ipsa est voluptatem sequi. Libero et non quos labore sit assumenda maiores.</p>
                 <p>Ipsam omnis odit accusamus totam facere. Eos excepturi et ex eum unde autem voluptatum consequatur. Perferendis
                   voluptatibus magni ipsum aut consequatur quia quia. Id corporis aut beatae aut rerum.</p>
@@ -162,7 +161,7 @@
                 <p>Porro aliquid aliquid amet laboriosam quo. Molestiae id et soluta corporis aspernatur qui maiores. Autem
                   aut sint laudantium excepturi quibusdam dicta exercitationem. Voluptate aut eaque esse nostrum sint et.
                   Corrupti est et quo repellat fuga sit</p>
-              </p>
+              <p></p>
             </div>
             <a href="http://esparza.biz/" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -170,7 +169,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1 has-detail" data-coordinates="[0,-3]" data-coordinates-expanded="[]" data-floor="2">
+      <div class="isometric-block block-1x1 has-detail" data-coordinates="[1,-2]" data-coordinates-expanded="[]" data-floor="2">
         <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: Chambre B">
         <h1>Chambre B</h1>
         <p class="description">Tenetur quia quia. </p>
@@ -179,10 +178,10 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Est asperiores soluta tempore</h4>
               <p class="card-text">
-                <p>&nbsp;</p>
+                </p><p>&nbsp;</p>
                 <p>Quaerat quaerat provident voluptas accusamus. Et provident qui voluptas quasi consectetur eum inventore ut.
                   Minima eveniet aperiam voluptates aliquid vero.</p>
-              </p>
+              <p></p>
             </div>
             <a href="http://www.deckow.com/" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -190,7 +189,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1 has-detail" data-coordinates="[-1,-2]" data-coordinates-expanded="[]" data-floor="2">
+      <div class="isometric-block block-1x1 has-detail" data-coordinates="[0,-1]" data-coordinates-expanded="[]" data-floor="2">
         <img src="img/chambre-C-ref-800x800.png" alt="Illustration de la pièce: Chambre C">
         <h1>Chambre C</h1>
         <p class="description">Aut perferendis perferendis id occaecati</p>
@@ -199,9 +198,9 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Est asperiores soluta tempore</h4>
               <p class="card-text">
-                <p>Quaerat quaerat provident voluptas accusamus. Et provident qui voluptas quasi consectetur eum inventore ut.
+                </p><p>Quaerat quaerat provident voluptas accusamus. Et provident qui voluptas quasi consectetur eum inventore ut.
                   Minima eveniet aperiam voluptates aliquid vero.</p>
-              </p>
+              <p></p>
             </div>
             <a href="http://acero.com/" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -209,7 +208,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1 has-detail" data-coordinates="[0,-2]" data-coordinates-expanded="[]" data-floor="2">
+      <div class="isometric-block block-1x1 has-detail" data-coordinates="[1,-1]" data-coordinates-expanded="[]" data-floor="2">
         <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: Chambre D">
         <h1>Chambre D</h1>
         <p class="description">Aut perferendis perferendis id occaecati</p>
@@ -218,8 +217,8 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Titre</h4>
               <p class="card-text">
-                <p>Doloremque laudantium voluptas dicta quia et omnis molestiae.</p>
-              </p>
+                </p><p>Doloremque laudantium voluptas dicta quia et omnis molestiae.</p>
+              <p></p>
             </div>
             <a href="http://acero.com/" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -227,7 +226,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-2x2 has-detail" data-coordinates="[-2, 0]" data-coordinates-expanded="[5,-3]" data-floor="2">
+      <div class="isometric-block block-2x2 has-detail" data-coordinates="[-1, 1]" data-coordinates-expanded="[5,-3]" data-floor="2">
         <img src="img/restauration-ref-1298x1262.png" alt="Illustration de la pièce: Restauration">
         <h1>Restauration</h1>
         <p class="description">Quia ad non quisquam. Magni fugit et ea voluptate maiores.</p>
@@ -236,10 +235,10 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Provident ea et consequatur</h4>
               <p class="card-text">
-                <p>Illum nihil sed nesciunt temporibus. Neque consequatur cum eos error enim. Provident ea et consequatur.</p>
+                </p><p>Illum nihil sed nesciunt temporibus. Neque consequatur cum eos error enim. Provident ea et consequatur.</p>
                 <p>Rerum itaque quis nostrum aut consequatur voluptatum blanditiis eos. Aut amet aliquam et omnis. Et nisi magnam
                   et rerum neque laudantium enim porro. Vel qui harum totam vel.</p>
-              </p>
+              <p></p>
             </div>
             <a href="#" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -247,7 +246,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-2x2 has-detail" data-coordinates="[0,0]" data-coordinates-expanded="[-3,-3]" data-floor="2">
+      <div class="isometric-block block-2x2 has-detail" data-coordinates="[1,1]" data-coordinates-expanded="[-3,-3]" data-floor="2">
         <img src="img/loisirs-ref-1298x1262.png" alt="Illustration de la pièce: Loisirs">
         <h1>Loisirs</h1>
         <p class="description">Praesentium praesentium tenetur quia quia. Ut voluptate molestiae et et.</p>
@@ -256,7 +255,7 @@
             <div class="card-block">
               <h4 class="card-title mb-0">Est asperiores soluta tempore</h4>
               <p class="card-text">
-                <p>Nihil in voluptatem sunt non impedit qui. Quae consequatur natus et adipisci. Amet quisquam voluptate iure.
+                </p><p>Nihil in voluptatem sunt non impedit qui. Quae consequatur natus et adipisci. Amet quisquam voluptate iure.
                   Voluptatem numquam dolor et ipsa est voluptatem sequi. Libero et non quos labore sit assumenda maiores.</p>
                 <p>Ipsam omnis odit accusamus totam facere. Eos excepturi et ex eum unde autem voluptatum consequatur. Perferendis
                   voluptatibus magni ipsum aut consequatur quia quia. Id corporis aut beatae aut rerum.</p>
@@ -270,7 +269,7 @@
                 <p>Occaecati minima et facilis et fugiat dignissimos suscipit. Necessitatibus laudantium quia placeat aliquam
                   dolorem.
                 </p>
-              </p>
+              <p></p>
             </div>
             <a href="http://esparza.biz/" class="card-block card-block-link text-center">
       <span class="card-link">En savoir plus</span>
@@ -278,13 +277,13 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-2,-4]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[0,-2]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-2,-3]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[0,-1]" data-coordinates-expanded="[]" data-floor="3" 4pxx;">
         <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-2x1 has-detail" data-coordinates="[-1,-3]" data-coordinates-expanded="[-3,5]" data-floor="3">
+      <div class="isometric-block block-2x1 has-detail" data-coordinates="[1,-1]" data-coordinates-expanded="[-3,5]" data-floor="3" 6pxx;">
         <img src="img/Soignants-ref-1200x1030.png" alt="Illustration de la pièce: Soignants">
         <h1>Soignants</h1>
         <p class="description"></p>
@@ -301,23 +300,23 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-4,-2]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[-2,-0]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-A-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-3,-2]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[-1,0]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-4,-1]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[-2,1]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-C-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-3,-1]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[-1,1]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-2x1" data-coordinates="[-2,-1]" data-coordinates-expanded="[1,5]" data-floor="3">
+      <div class="isometric-block block-2x1" data-coordinates="[0,1]" data-coordinates-expanded="[1,5]" data-floor="3">
         <img src="img/finances-ref-1200x1030.png" alt="Illustration de la pièce: Finances">
         <h1>Finances</h1>
       </div>
-      <div class="isometric-block block-2x1" data-coordinates="[-1,-1]" data-coordinates-expanded="[4,1]" data-floor="3">
+      <div class="isometric-block block-2x1" data-coordinates="[1,1]" data-coordinates-expanded="[4,1]" data-floor="3">
         <img src="img/bureau-manager-ref-1200x1030.png" alt="Illustration de la pièce: Bureau manager">
         <h1>Bureau manager</h1>
       </div>
@@ -348,7 +347,7 @@
   <script src="../dist/house-of-isometry.js"></script>
   <script>
     $(document).ready(function () {
-      var isometricLayout = new IsometricGrid($('.isometric-layout'), 200, 116);
+      var isometricLayout = new IsometricGrid($('.isometric-layout'), 200, 116, 82);
       $('.isometric-layout .showExpandedView').on('click touch', function(e) {
         e.preventDefault();
         isometricLayout.showExpandedView();
