--- a/example/index.html
+++ b/example/index.html
@@ -13,8 +13,8 @@
 
 <body class="bg-info">
   <div class="sr-only">
-    <h1 class="text-secondary">Logiciel de référence pour EMS</h1>
-    <h2 class="text-secondary mb-3"><strong>Sadies est présent à tous les étages</strong></h2>
+    <h1>House of Isometry</h1>
+    <h2><strong>An isometric representation of many services</strong></h2>
   </div>
   <div aria-hidden="true" class="isometric-layout home-view">
     <div class="information-container visible information-container-home">
@@ -23,11 +23,11 @@
           <div class="col-md-12">
             <div class="text-center">
               <div class="fade-out-top fade-out">
-                <h1 class="text-secondary">Logiciel de référence pour EMS</h1>
-                <h2 class="text-secondary mb-3"><strong>Sadies est présent à tous les étages</strong></h2>
+                <h1>House of Isometry</h1>
+                <h4 class="text-muted mb-3"><strong>An isometric representation of many services</strong></h4>
               </div>
               <div class="fade-out-bottom fade-out mt-5">
-                <a href="#" class="btn btn-lg btn-primary btn-bold showExpandedView">Explorer l’EMS</a>
+                <a href="#" class="btn btn-lg btn-primary btn-bold showExpandedView">Explore the building 💥</a>
               </div>
             </div>
           </div>
@@ -38,10 +38,7 @@
       <div class="container mt-5">
         <div class="row">
           <div class="col-md-4">
-            <a href="#" class="btn btn-primary showHomeView">
-          <span class="icons icons-arrow-left icons-left mr-1"></span>
-          Retour
-        </a>
+            <a href="#" class="btn btn-primary showHomeView">← Back</a>
           </div>
         </div>
       </div>
@@ -51,8 +48,7 @@
         <div class="row">
           <div class="col-md-7">
             <a href="#" class="btn btn-primary showExpandedView mb-2">
-            <span class="icons icons-arrow-left icons-left mr-1"></span>
-            Back to plan
+              ← Back to the plan
             </a>
           </div>
           <div class="col-md-5 content-detail-container">
@@ -61,9 +57,9 @@
       </div>
     </div>
     <div class="isometric-grid">
-      <div class="isometric-block block-2x2 has-detail" data-coordinates="[1,-1]" data-coordinates-expanded="[1,-3]" data-floor="1">
+      <div class="isometric-block block-2x2 has-detail" data-coordinates="[3,2]" data-coordinates-expanded="[1,-3]" data-floor="1">
         <img src="img/transportl-ref-1298x1262.png" alt="Illustration de la pièce: Debitis enim amet suscipit">
-        <h1>Debitis enim amet suscipit</h1>
+        <h1>Transport</h1>
         <p class="description">Reprehenderit dolor dolores reiciendis est distinctio atque quidem debitis. Eum delectus suscipit fuga qui saepe
           deserunt mollitia. Accusamus iste quas eligendi distinctio voluptatibus incidunt.</p>
         <div class="content-detail">
@@ -81,9 +77,9 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-2x1 has-detail" data-coordinates="[-2,1]" data-coordinates-expanded="[-6,1]" data-floor="1">
+      <div class="isometric-block block-2x1 has-detail" data-coordinates="[1,3]" data-coordinates-expanded="[-6,1]" data-floor="1">
         <img src="img/stock-ref-1200x1030.png" alt="Illustration de la pièce: Sed repellendus">
-        <h1>Sed repellendus</h1>
+        <h1>Supply</h1>
         <p class="description">Repudiandae eligendi nesciunt adipisci facere exercitationem esse commodi. Vel et aut ipsa tenetur nihil.</p>
         <div class="content-detail">
           <div class="card">
@@ -100,9 +96,9 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-2x1 has-detail" data-coordinates="[-1,1]" data-coordinates-expanded="[-3,1]" data-floor="1">
+      <div class="isometric-block block-2x1 has-detail" data-coordinates="[3,3]" data-coordinates-expanded="[-3,1]" data-floor="1">
         <img src="img/cuisine-ref-1200x1030.png" alt="Illustration de la pièce: Repudiandae repellendus nesciunt">
-        <h1>Repudiandae repellendus</h1>
+        <h1>Kitchen</h1>
         <p class="description">Et illum eum ea dolorem eveniet et. Repudiandae ut ipsa ut ut. Dignissimos hic facilis distinctio accusantium doloremque.<br>
         </p>
         <div class="content-detail">
@@ -120,7 +116,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-2x2 has-detail" data-coordinates="[1,1]" data-coordinates-expanded="[1,1]" data-floor="1">
+      <div class="isometric-block block-2x2 has-detail" data-coordinates="[3,3]" data-coordinates-expanded="[1,1]" data-floor="1">
         <img src="img/accueil-ref-1298x1262.png" alt="Illustration de la pièce: Accueil">
         <h1>Accueil</h1>
         <p class="description">Quasi aut iusto non. Quia quia magni veniam eos perferendis.</p>
@@ -142,7 +138,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1 has-detail" data-coordinates="[0,-2]" data-coordinates-expanded="[4,4]" data-floor="2">
+      <div class="isometric-block block-1x1 has-detail" data-coordinates="[2,0]" data-coordinates-expanded="[4,4]" data-floor="2">
         <img src="img/chambre-A-ref-800x800.png" alt="Illustration de la pièce: Chambre A">
         <h1>Chambre A</h1>
         <p class="description">Praesentium praesentium tenetur quia quia. </p>
@@ -169,7 +165,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1 has-detail" data-coordinates="[1,-2]" data-coordinates-expanded="[]" data-floor="2">
+      <div class="isometric-block block-1x1 has-detail" data-coordinates="[3,0]" data-coordinates-expanded="[]" data-floor="2">
         <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: Chambre B">
         <h1>Chambre B</h1>
         <p class="description">Tenetur quia quia. </p>
@@ -189,7 +185,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1 has-detail" data-coordinates="[0,-1]" data-coordinates-expanded="[]" data-floor="2">
+      <div class="isometric-block block-1x1 has-detail" data-coordinates="[2,1]" data-coordinates-expanded="[]" data-floor="2">
         <img src="img/chambre-C-ref-800x800.png" alt="Illustration de la pièce: Chambre C">
         <h1>Chambre C</h1>
         <p class="description">Aut perferendis perferendis id occaecati</p>
@@ -208,7 +204,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1 has-detail" data-coordinates="[1,-1]" data-coordinates-expanded="[]" data-floor="2">
+      <div class="isometric-block block-1x1 has-detail" data-coordinates="[2,2]" data-coordinates-expanded="[]" data-floor="2">
         <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: Chambre D">
         <h1>Chambre D</h1>
         <p class="description">Aut perferendis perferendis id occaecati</p>
@@ -226,7 +222,7 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-2x2 has-detail" data-coordinates="[-1, 1]" data-coordinates-expanded="[5,-3]" data-floor="2">
+      <div class="isometric-block block-2x2 has-detail" data-coordinates="[1, 3]" data-coordinates-expanded="[5,-3]" data-floor="2">
         <img src="img/restauration-ref-1298x1262.png" alt="Illustration de la pièce: Restauration">
         <h1>Restauration</h1>
         <p class="description">Quia ad non quisquam. Magni fugit et ea voluptate maiores.</p>
@@ -246,9 +242,9 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-2x2 has-detail" data-coordinates="[1,1]" data-coordinates-expanded="[-3,-3]" data-floor="2">
+      <div class="isometric-block block-2x2 has-detail" data-coordinates="[3,3]" data-coordinates-expanded="[-3,-3]" data-floor="2">
         <img src="img/loisirs-ref-1298x1262.png" alt="Illustration de la pièce: Loisirs">
-        <h1>Loisirs</h1>
+        <h1>Entertainment</h1>
         <p class="description">Praesentium praesentium tenetur quia quia. Ut voluptate molestiae et et.</p>
         <div class="content-detail">
           <div class="card">
@@ -277,13 +273,13 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[0,-2]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[2,0]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[0,-1]" data-coordinates-expanded="[]" data-floor="3" 4pxx;">
+      <div class="isometric-block block-1x1" data-coordinates="[2,1]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-2x1 has-detail" data-coordinates="[1,-1]" data-coordinates-expanded="[-3,5]" data-floor="3" 6pxx;">
+      <div class="isometric-block block-2x1 has-detail" data-coordinates="[3,1]" data-coordinates-expanded="[-3,5]" data-floor="3">
         <img src="img/Soignants-ref-1200x1030.png" alt="Illustration de la pièce: Soignants">
         <h1>Soignants</h1>
         <p class="description"></p>
@@ -300,41 +296,41 @@
           </div>
         </div>
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-2,-0]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[0,2]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-A-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-1,0]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[1,2]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-D-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-2,1]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[0,3]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-C-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[-1,1]" data-coordinates-expanded="[]" data-floor="3">
+      <div class="isometric-block block-1x1" data-coordinates="[2,3]" data-coordinates-expanded="[]" data-floor="3">
         <img src="img/chambre-B-ref-800x800.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-2x1" data-coordinates="[0,1]" data-coordinates-expanded="[1,5]" data-floor="3">
+      <div class="isometric-block block-2x1" data-coordinates="[2,3]" data-coordinates-expanded="[1,5]" data-floor="3">
         <img src="img/finances-ref-1200x1030.png" alt="Illustration de la pièce: Finances">
-        <h1>Finances</h1>
+        <h1>Finance</h1>
       </div>
-      <div class="isometric-block block-2x1" data-coordinates="[1,1]" data-coordinates-expanded="[4,1]" data-floor="3">
+      <div class="isometric-block block-2x1" data-coordinates="[3,3]" data-coordinates-expanded="[4,1]" data-floor="3">
         <img src="img/bureau-manager-ref-1200x1030.png" alt="Illustration de la pièce: Bureau manager">
-        <h1>Bureau manager</h1>
+        <h1>Manager's office</h1>
       </div>
-      <div class="isometric-block block-1x2" data-coordinates="[-1,2]" data-coordinates-expanded="[]" data-floor="1">
+      <div class="isometric-block block-1x2" data-coordinates="[1,4]" data-coordinates-expanded="[]" data-floor="1">
         <img src="img/Exterieur-EMS-Cuisine_stock.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x2" data-coordinates="[1,2]" data-coordinates-expanded="[2,8]" data-floor="1">
+      <div class="isometric-block block-1x2" data-coordinates="[3,4]" data-coordinates-expanded="[2,8]" data-floor="1">
         <img src="img/Exterieur-EMS-Accueil-ouest.png" alt="Illustration de la pièce: Bureau manager">
-        <h1>Bureau manager</h1>
+        <h1>Manager's office</h1>
         <p class="description">Dolor voluptate aut qui voluptates quibusdam. Eum quos officia et.</p>
       </div>
-      <div class="isometric-block block-2x1" data-coordinates="[2,-1]" data-coordinates-expanded="[]" data-floor="1">
+      <div class="isometric-block block-2x1" data-coordinates="[4,1]" data-coordinates-expanded="[]" data-floor="1">
         <img src="img/Exterieur-EMS-Transport.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-2x1" data-coordinates="[2,1]" data-coordinates-expanded="[]" data-floor="1">
+      <div class="isometric-block block-2x1" data-coordinates="[4,3]" data-coordinates-expanded="[]" data-floor="1">
         <img src="img/Exterieur-EMS-Accueil-est.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="isometric-block block-1x1" data-coordinates="[2,2]" data-floor="1">
+      <div class="isometric-block block-1x1" data-coordinates="[4,4]" data-floor="1">
         <img src="img/Exterieur-EMS-Accueil-angle.png" alt="Illustration de la pièce: ">
       </div>
       <div class="focus-background gradient-background gradient-background-brown">
