--- a/example/index.html
+++ b/example/index.html
@@ -142,7 +142,7 @@
                 </p><p>Ut
                   <del>voluptas non voluptatum</del> non. Occaecati a nihil iure doloremque saepe. <a href="http://www.google.com">Ut illo ratione blanditiis</a>                  delectus quam dolores in.</p>
                 <p>Est voluptas <strong>nulla</strong> quia qui alias dolores est. Culpa in et sunt molestiae consequatur sequi.
-                  <em>Qui nam omnis</em> fugit optio. Id sunt labore quis quo <span style="text-decoration: underline;">consectetur</span>                  quia.</p>
+                  <em>Qui nam omnis</em> fugit optio. Id sunt labore quis quo <span style="text-decoration: underline;">consectetur</span> quia.</p>
                 <p>Test</p>
               <p></p>
             </div>
@@ -345,13 +345,13 @@
       <div class="isometric-block block-1x1" data-coordinates="[4,4]" data-floor="1">
         <img src="img/Exterieur-EMS-Accueil-angle.png" alt="Illustration de la pièce: ">
       </div>
-      <div class="focus-background gradient-background gradient-background-brown">
+      <div class="focus-background bg-info">
       </div>
     </div>
   </div>
   <div class="impressum">
     <p class="text-muted">
-      realised by <a href="http://www.antistatique.net">Antistatique</a> for <a href="http://www.sadies.ch">Sadies</a>, illustration by <a href="http://www.philippe-mignotte.fr/">P. Mignotte</a>
+      realised by <a target="_blank" href="http://www.antistatique.net">Antistatique</a> for <a target="_blank" href="http://www.sadies.ch">Sadies</a>, illustration by <a target="_blank" href="http://www.philippe-mignotte.fr/">P. Mignotte</a>
     </p>
   </div>
 
@@ -360,7 +360,7 @@
   <script src="../dist/house-of-isometry.js"></script>
   <script>
     $(document).ready(function () {
-      var isometricLayout = new IsometricGrid($('.isometric-layout'), 200, 116, 82);
+      var isometricLayout = new IsometricGrid($('.isometric-layout'), 200, 82, 30);
       $('.isometric-layout .showExpandedView').on('click touch', function(e) {
         e.preventDefault();
         isometricLayout.showExpandedView();
